# git-corun

./: Cargo.toml
shared/: Cargo.toml
src/: main.rs
