[package]
name = "git-corun"
version = "0.1.0"
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
bytes = "0.4.12"
chrono = "0.4.9"
dirs = "2.0.2"
futures = "0.3.0"
serde = { version = "1.0.101", features = [ "derive" ] }
serde_json = "1.0.41"
tokio = { version = "0.2.2", features = [ "rt-core", "rt-util", "sync" ] }
structopt = "0.3.15"

[dev-dependencies]
tokio = { version = "0.2", features = [ "macros", "time" ] }
